<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emplaceme.feedback.Activity.CustomerDateForm">


    <RelativeLayout
        android:id="@+id/layoutOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_green_done" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutOne"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/thankYou"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/greetingMessage"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutThree"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/layoutFormOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:textColorHint="#E6E6E6" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutFormTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutFormOne">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:editable="false"
                    android:singleLine="true"
                    android:textColorHint="#808080" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutFormThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutFormTwo">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_anniversary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/input_anniversary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aniversary"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:editable="false"
                    android:singleLine="true"
                    android:textColorHint="#808080" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutFormThree"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/submitText"
            android:textColor="#FFFFFF" />


    </RelativeLayout>


</RelativeLayout>
