<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emplaceme.feedback.Activity.CustomerLogin">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_image_customer_login" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/outletLogoLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/background_border_color_outer">


        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_border_color_inner">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="2dp"
                android:src="@drawable/store_logo" />
        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/outletNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outletLogoLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/outletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:shadowColor="#FFFFFF"
            android:text=" "
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outletNameLayout"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:shadowColor="#FFFFFF"
            android:text="@string/welcomeFeedback"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="normal" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutOne"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:shadowColor="#FFFFFF"
            android:text="@string/spendTime"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <LinearLayout
            android:id="@+id/layoutFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/countryCodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="6">

                <Spinner
                    android:id="@+id/countryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutFour"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailId"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:text="@string/continueText"
            android:textColor="#000000" />

    </RelativeLayout>

</RelativeLayout>


